@@ -1,4 +1,6 @@
 Release ...
+* deroff: Now recognizes the ".do" and ".xflag" requests as well as an "-xN"
+  command line option to handle Heirloom nroff/troff extensions.
 * ed: Substituting only a specific occurence of the pattern, as in the
   command "s/x/y/3", now works correctly if the substitution "y" is not
   equal in length to the pattern match "x" (Derek Thomas).
